fix: tab width fills rows on overflow does not work as expected (closes #526)
simplify code, using flex to fills the rows
add option for not filling the last row (#527)

--- a/addon/chrome/content/overlay/browser.css
+++ b/addon/chrome/content/overlay/browser.css
@@ -273,6 +273,10 @@ so display: none !important; does not hide the button */
   flex: 1 1 0% !important;
 }
 
+#tabbrowser-tabs[orient="horizontal"][tabmix-multibar][tabmix-tabsFitRow="shrinkLastRow"]:not([widthFitTitle]) #tabbrowser-arrowscrollbox #tabbrowser-arrowscrollbox-periphery {
+  flex-grow: 9999;
+}
+
 #tabbrowser-tabs[orient="horizontal"][widthFitTitle] #tabbrowser-arrowscrollbox
 .tabbrowser-tab:not([pinned]) > .tab-stack > .tab-content > .tab-close-button {
   margin-inline-start: 1px !important;
